# plan_a

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  docker-compose.yml  方案A_图驱动优化版.md  课题概要.txt  课题详情.txt
backend/: Dockerfile  README.md  environment.yml  pyproject.toml  ruff.toml
backend/app/: deps.py  events.py  governance.py  main.py
backend/app/middleware/: auth.py
backend/app/routers/: __init__.py  enterprise.py  evals.py  health.py  hitl.py  kb.py  metrics.py  revisions.py  runs.py  runtime.py  skills.py  stream.py  trace.py  workflows.py
backend/app/routes/: crawl.py  knowledge.py
backend/db/postgres/: 001_enterprise_core.sql
backend/scripts/: compare_real_run_quality.py  eval_baseline.py  eval_enterprise.py  export_graph_png.py  export_openapi.py  phase4_readiness_report.py  run_temporal_worker.py  scan_secrets.py  seed_cases.py  smoke_backup_llm.py  smoke_enterprise_postgres.py  smoke_fetch.py  smoke_llm.py  smoke_minimal_run.py  smoke_phase2_business_intel.py  smoke_phase3_strict.py  smoke_search.py  smoke_temporal_server.py  smoke_temporal_thin_shell.py
backend/tests/: conftest.py
backend/tests/contract/: test_agent_message_protocol.py  test_skill_tool_modules.py
backend/tests/integration/: test_postgres_rls_smoke.py  test_redo_routing_contract.py
backend/tests/replay/: test_trace_replay_contract.py
backend/tests/unit/: test_advanced_fetch.py  test_advisory_context.py  test_agent_executor.py  test_agent_module_imports.py  test_architecture_boundaries.py  test_artifacts.py  test_audit_kb_quality.py  test_auth_middleware.py  test_batch_ingest.py  test_business_intel.py  test_claim_release.py  test_collect_real_sources.py  test_compare_real_run_quality_script.py  test_compliance_redaction.py  test_compliance_retention.py  test_crawler_p0.py  test_crawler_phase4.py  test_dedup.py  test_document_versioning.py  test_embeddings.py  test_evalops.py  (+57 more)
(+317 files in other folders)
